--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "thandazilemoyo",
   "description": "Thandazile Moyo Personal Site",
   "version": "0.0.1",
+  "engines": {
+    "node": "0.8.4",
+    "npm":  "1.1.45"
+   },
   "private": true,
   "dependencies": {
     "express": "3.0.0rc1",
