--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "description": "Thandazile Moyo Personal Site",
   "version": "0.0.1",
   "engines": {
-    "node": "0.8.4",
-    "npm":  "1.1.41"
+    "node": "0.8.x",
+    "npm":  "1.1.x"
    },
   "private": true,
   "dependencies": {
